# route-analyzer

./: .gitignore  README.md  RouteAnalyzer  index.html  index_old.html  main.cpp
backend/: package-lock.json  package.json
cpp/: CMakeLists.txt  README.md  RouteAnalyzer  main.cpp
cpp/include/: AStarAlgorithm.h  AssignmentAlgorithm.h  RandomPointGenerator.h  RoadDistanceService.h
cpp/src/: RandomPointGenerator.cpp
docs/: README.md
include/: Dijkstra.h  Graph.h
src/: Dijkstra.cpp  Graph.cpp
web/: index.html
web/css/: styles.css
web/js/: app.js
web/js/algorithms/: AStarAlgorithm.js  AssignmentAlgorithm.js  Dijkstra.js  RandomPointGenerator.js
web/js/datastructures/: Graph.js  Point.js  PriorityQueue.js
web/js/services/: AssignmentVisualizer.js  RoadDistanceService.js  TrafficProcessor.js  TrafficService.js
web/js/utils/: ProgressBar.js  Utils.js
